Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 <h2>Bootstrap extension for Popover</h2>
 
 <p><a href="https://github.com/tshi0912/bootstrapx-popoverx">https://github.com/tshi0912/bootstrapx-popoverx</a> </p>
+
+<h1>如何找到我</h1>
+
+<p>常用邮箱: <a href="mailto:storm0912@126.com">storm0912@126.com</a></p>
+
+<hr><p>新浪微博：<a href="http://weibo.com/storm0912">积木的唠叨</a></p>
       </section>
     </div>
 
